--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelsam
 board = adafruit_circuitplayground_m0
 framework = arduino
-lib_deps = adafruit/Adafruit Circuit Playground@^1.11.4
+lib_deps = 
+	adafruit/Adafruit Circuit Playground@^1.11.4
+	jchristensen/JC_Button@^2.1.2
